--- a/src/index.css
+++ b/src/index.css
@@ -10,8 +10,11 @@ body {
 }
 
 .map-container {
-  height: 600px;
-  width: 100%;
   border: 2px solid red;
   overflow: hidden;
+}
+
+.leaflet-container {
+  height: 600px;
+  width: 100%;
 }
